refactor(pan): 清理淘洗相关代码的冗余写法
- ModItems 金淘盘的幸运加成与再生概率由 lambda 改为方法引用，去掉多余包装
- FabricPanningConfig 的 clamp 改用 Math.clamp，省去手写的 min/max 嵌套
- ConfigData 补 @SuppressWarnings("FieldMayBeFinal") 与类注释，说明字段须由 Gson 反射写入故不能声明为 final
- ShimmerVariants 移除未使用的 LootTable import